Bug 480340 - Ktorrent has a colorful icon in the System Tray
Summary: Ktorrent has a colorful icon in the System Tray
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.01.90
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords: qt6
Depends on:
Blocks: 473215
  Show dependency treegraph
 
Reported: 2024-01-25 22:06 UTC by Jay Augen
Modified: 2024-01-26 21:03 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (15.93 KB, image/png)
2024-01-25 22:06 UTC, Jay Augen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jay Augen 2024-01-25 22:06:00 UTC
Created attachment 165217 [details]
Screenshot

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: KDE Neon Testing
(available in About System)
KDE Plasma Version: 5.92.90
KDE Frameworks Version: 5.249.0
Qt Version: 6.6.1

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2024-01-25 22:11:37 UTC
The issue here is that KTorrent is asking for the `ktorrent` icon, which was fine in Plasma 5 because the Plasma theme provided a monochrome version of that icon to override the colorful version in the icon theme. In Plasma 6 this is no longer the case, so KTorrent now needs to ask for the `ktorrent-symbolic` icon for its tray icon. The Breeze icon theme already contains one such icon already, so KTorrent just needs to ask for it. Moving to KTorrent.
Comment 2 Bug Janitor Service 2024-01-26 15:52:00 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/ktorrent/-/merge_requests/108
Comment 3 Jack Hill 2024-01-26 20:58:47 UTC
Git commit d97c5e4f20343428f3e8310b94210578ae062719 by Jack Hill.
Committed on 26/01/2024 at 15:50.
Pushed by jackh into branch 'master'.

Request symbolic tray icon

The Plasma icon theme now uses the system-wide icon theme, which means "ktorrent"
corresponds to the full-colour icon. Instead we want the monochromatic "symbolic"
version.

M  +1    -1    ktorrent/trayicon.cpp

https://invent.kde.org/network/ktorrent/-/commit/d97c5e4f20343428f3e8310b94210578ae062719
Comment 4 Jack Hill 2024-01-26 21:03:08 UTC
Git commit d519f9d6d2296a3649ef98ff0ef444da3478dd0a by Jack Hill.
Committed on 26/01/2024 at 20:59.
Pushed by jackh into branch 'release/24.02'.

Request symbolic tray icon

The Plasma icon theme now uses the system-wide icon theme, which means "ktorrent"
corresponds to the full-colour icon. Instead we want the monochromatic "symbolic"
version.


(cherry picked from commit d97c5e4f20343428f3e8310b94210578ae062719)

M  +1    -1    ktorrent/trayicon.cpp

https://invent.kde.org/network/ktorrent/-/commit/d519f9d6d2296a3649ef98ff0ef444da3478dd0a