Request symbolic tray icon

The Plasma icon theme now uses the system-wide icon theme, which means "ktorrent"
corresponds to the full-colour icon. Instead we want the monochromatic "symbolic"
version.

BUG: 480340


(cherry picked from commit d97c5e4f20343428f3e8310b94210578ae062719)